package edu.uees.tutorias.adapter;

public class ProveedorZoom {
    public String generarMeeting(String topic, String hostEmail) {
        return "httpss://zoom.uss/meeting/123";
    }
}
