package edu.uees.tutorias.adapter;

public interface Videoconferencia {
    String crearSala(String titulo, String correoDocente);
}
